--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "aos": "^2.3.4 , ^3.0.0-beta.6",
+    "aos": "^2.3.4",
+    "axios": "^1.9.0",
     "firebase": "^11.8.1",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-scroll": "^1.9.3"
-    
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
